--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -4,21 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="sub1.css">
+    <title>ABOUT</title>
+
     <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="sub1.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Yantramanav:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css"
         integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <h1 class="logo"><a href=""><img src="../../images/logo.png" alt="KROPP"></a></h1>
         <h2 class="a11y-hidden">Menu</h2>
-
         <div class="utility">
             <button class="btn-book">Book now</button>
             <input id="hamburger" type="checkbox">
@@ -26,13 +28,12 @@
                 <div class="btn"><img src="../../images/ico_what.svg" alt="what"></div>
             </label>
         </div>
-
         <nav class="gnb">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="./pages/sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
-                <li><a href="./pages/sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
-                <li><a href="./pages/sub2/sub2.html" target="_blank" title="Open new window">members</a></li>
+                <li><a href="../main/main.html" target="_blank">Home</a></li>
+                <li><a href="../sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
+                <li><a href="../sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
+                <li><a href="../sub2/sub2.html" target="_blank" title="Open new window">members</a>
             </ul>
         </nav>
     </header>
@@ -91,7 +92,7 @@
                 </div>
             </div>
             <div class="contents-imgbox">
-                <img src="./images/img-contents1.jpg" alt="" class="contents-img">
+                <img src="./images/img-contents1.jpg" alt="content1" class="contents-img">
             </div>
         </div>
     </section>
@@ -99,7 +100,7 @@
     <section class="main-contents">
         <div class="main-contents-containar">
             <div class="contents-imgbox">
-                <img src="./images/img-contents2.jpg" alt="" class="contents-img">
+                <img src="./images/img-contents2.jpg" alt="content2" class="contents-img">
             </div>
 
             <div class="main-contents__text ">
@@ -197,11 +198,13 @@
 
 
         <div class="contents-containar">
+
             <div class="second-contents_gymbox">
-                <div class="second-contents__img"><img src="./images/img-benefit1.jpg" alt="22">
+                <div class="second-contents__img">
+                    <img src="./images/img-benefit1.jpg" alt="benefit1">
                 </div>
                 <div class="second-contents__titlebox">
-                    <h3 class="second-contents__titlebox__main">1. Professional Coaching Team</h3>
+                    <h3 class="second-contents__titlebox__main">1. Professional Coaching <span>Team</span></h3>
                     <p class="second-contents__titlebox__sub">"Our gym is staffed with certified CrossFit coaches
                         who
                         provide personalized guidance tailored to each member's goals and fitness level. We
@@ -212,7 +215,7 @@
                     <a href="#coach">
                         <div class="btn-arr">
                             <div class="second-contents__titlebox__arr">view team<div class="btn-arr_sub">
-                                    <img src="./images/ico-arr.svg" alt="">
+                                    <img src="./images/ico-arr.svg" alt="arr">
                                 </div>
                             </div>
                         </div>
@@ -222,10 +225,12 @@
             </div>
 
             <div class="second-contents_gymbox">
-                <div class="second-contents__img"><img src="./images/img-benefit2.jpg" alt="22"></div>
+                <div class="second-contents__img">
+                    <img src="./images/img-benefit2.jpg" alt="benefit2">
+                </div>
 
                 <div class="second-contents__titlebox">
-                    <h3 class="second-contents__titlebox__main">2. Structured and Diverse Programs</h3>
+                    <h3 class="second-contents__titlebox__main">2. Structured and Diverse <span>Programs</span></h3>
                     <p class="second-contents__titlebox__sub">"From beginner-friendly classes to high-intensity
                         programs
                         for advanced athletes, we offer a variety of CrossFit classes for all levels. We also
@@ -236,18 +241,20 @@
                     <a href="#pt">
                         <div class="btn-arr">
                             <div class="second-contents__titlebox__arr">view classes<span class="btn-arr_sub"><img
-                                        src="./images/ico-arr.svg" alt=""></span>
+                                        src="./images/ico-arr.svg" alt="arr"></span>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
             <div class="second-contents_gymbox">
-                <div class="second-contents__img"><img src="./images/img-benefit3.jpg" alt="22">
+                <div class="second-contents__img">
+                    <img src="./images/img-benefit3.jpg" alt="benefit3">
                 </div>
 
                 <div class="second-contents__titlebox">
-                    <h3 class="second-contents__titlebox__main">3. State-of-the-Art Facilities and Comfortable
+                    <h3 class="second-contents__titlebox__main">3. State-of-the-Art <span>Facilities</span> and
+                        Comfortable
                         Environment
                     </h3>
                     <p class="second-contents__titlebox__sub">"We provide the latest equipment in a clean and
@@ -260,13 +267,14 @@
                     <a href="#pt">
                         <div class="btn-arr">
                             <div class="second-contents__titlebox__arr">view facilities<span class="btn-arr_sub"><img
-                                        src="./images/ico-arr.svg" alt=""></span>
+                                        src="./images/ico-arr.svg" alt="arr"></span>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-        </div>
+
+
         </div>
     </section>
 
@@ -293,7 +301,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach1.jpg" alt="1">
+                        <img src="./images/img-coach1.jpg" alt="coach1" class="img-coa">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -308,7 +316,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach2.jpg" alt="2">
+                        <img src="./images/img-coach2.jpg" alt="coach2">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -323,7 +331,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach3.jpg" alt="3">
+                        <img src="./images/img-coach3.jpg" alt="coach3">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -338,7 +346,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach4.jpg" alt="4">
+                        <img src="./images/img-coach4.jpg" alt="coach4">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -353,7 +361,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach5.jpg" alt="5">
+                        <img src="./images/img-coach5.jpg" alt="coach5">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -368,7 +376,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach6.jpg" alt="6">
+                        <img src="./images/img-coach6.jpg" alt="coach6">
                     </div>
                 </div>
             </div>
@@ -379,7 +387,7 @@
     <!-- 풋터 -->
     <footer>
         <div class="footer__wrapper ">
-            <div class="footer__logo"><img src="images/logo.png" alt=""></div>
+            <div class="footer__logo"><img src="../../images/logo.png" alt=""></div>
             <span class="footer__text">please feel free to send us an e-mail at kropp@qodeinteractive.com For any
                 additional inquiries</span>
             <div class="footer__item" id="footer__item--about">
@@ -403,19 +411,20 @@
             </div>
             <div class="footer__item" id="footer__item--start-now">
                 <div class="footer__item__title">start now</div>
-                <div class="btn--arrow"><input type="email" placeholder="Email"></div>
+                <div class="btn--arrow"><input type="email" placeholder="Email" class="footer__input"></div>
                 <div class="footer__item__icon-wrapper">
-                    <a><img src="images/ico_ticktok.svg" alt=""></a>
-                    <a><img src="images/ico_youtube.svg" alt=""></a>
-                    <a><img src="images/ico_instagram.svg" alt=""></a>
-                    <a><img src="images/ico_facebook.svg" alt=""></a>
-                    <a><img src="images/ico_twitter.svg" alt=""></a>
+                    <a><img src="../../images/ico_ticktok.svg" alt="" q></a>
+                    <a><img src="../../images/ico_youtube.svg" alt=""></a>
+                    <a><img src="../../images/ico_instagram.svg" alt=""></a>
+                    <a><img src="../../images/ico_facebook.svg" alt=""></a>
+                    <a><img src="../../images/ico_twitter.svg" alt=""></a>
                 </div>
             </div>
             <span class="footer__bottom-text">© 2022 Qode Interactive, All Rights Reserved | Privacy Policy | Contact
                 Us</span>
         </div>
     </footer>
+
 </body>
 
 </html>
