--- a/header-template.html
+++ b/header-template.html
@@ -19,10 +19,10 @@
     
     <nav class="gnb">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="./pages/sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
-        <li><a href="./pages/sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
-        <li><a href="./pages/sub2/sub2.html" target="_blank" title="Open new window">members</a></li>
+        <li><a href="../../index.html" target="_blank" title="Open new window">Home</a></li>
+        <li><a href="../sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
+        <li><a href="../sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
+        <li><a href="../sub2/sub2.html" target="_blank" title="Open new window">members</a></li>
       </ul>
     </nav> 
   </header>
