--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -19,6 +19,7 @@
 <body>
     <!-- header -->
     <header>
+        <p class="a11y-hidden">헤더</p>
         <h1 class="logo"><a href=""><img src="../../images/logo.png" alt="KROPP"></a></h1>
         <h2 class="a11y-hidden">Menu</h2>
         <div class="utility">
@@ -67,7 +68,10 @@
 
     <!-- 메인 컨텐츠 -->
     <!-- 크로스핏 이란? -->
+
     <section class="main-contents">
+
+        <p class="a11y-hidden">크로스핏이란</p>
         <div class="main-contents-containar">
             <p class="a11y-hidden">내용</p>
             <div class="main-contents-box">
@@ -97,7 +101,9 @@
         </div>
     </section>
     <!-- 크로스핏의 장점 -->
+    <p class="a11y-hidden">크로스핏의 장점</p>
     <section class="main-contents">
+
         <div class="main-contents-containar">
             <div class="contents-imgbox">
                 <img src="./images/img-contents2.jpg" alt="content2" class="contents-img">
@@ -188,7 +194,7 @@
     <!--  세컨드 컨텐츠  -->
     <!-- 체육관의 장점 -->
     <section class="second-contents">
-
+        <p class="a11y-hidden">체육관의 장점</p>
         <div class="second-contents__main">
             <div class="second-back-text">come!</div>
             <div class="second-contents__title">
@@ -281,6 +287,7 @@
     <!-- 서드 컨텐츠 -->
     <!-- 코치팀 -->
     <section class="third-contents" name="coach" id="coach">
+        <p class="a11y-hidden">코치팀</p>
         <div class="third-contents__main">
             <div class="second-back-text">team</div>
             <div class="third-contents__title">
@@ -386,8 +393,9 @@
 
     <!-- 풋터 -->
     <footer>
+        <p class="a11y-hidden">풋터</p>
         <div class="footer__wrapper ">
-            <div class="footer__logo"><img src="../../images/logo.png" alt=""></div>
+            <div class="footer__logo"><img src="../../images/logo.png" alt="logo"></div>
             <span class="footer__text">please feel free to send us an e-mail at kropp@qodeinteractive.com For any
                 additional inquiries</span>
             <div class="footer__item" id="footer__item--about">
@@ -413,11 +421,11 @@
                 <div class="footer__item__title">start now</div>
                 <div class="btn--arrow"><input type="email" placeholder="Email" class="footer__input"></div>
                 <div class="footer__item__icon-wrapper">
-                    <a><img src="../../images/ico_ticktok.svg" alt="" q></a>
-                    <a><img src="../../images/ico_youtube.svg" alt=""></a>
-                    <a><img src="../../images/ico_instagram.svg" alt=""></a>
-                    <a><img src="../../images/ico_facebook.svg" alt=""></a>
-                    <a><img src="../../images/ico_twitter.svg" alt=""></a>
+                    <a><img src="../../images/ico_ticktok.svg" alt="ticktok" q></a>
+                    <a><img src="../../images/ico_youtube.svg" alt="youtube"></a>
+                    <a><img src="../../images/ico_instagram.svg" alt="instagram"></a>
+                    <a><img src="../../images/ico_facebook.svg" alt="facebook"></a>
+                    <a><img src="../../images/ico_twitter.svg" alt="twitter"></a>
                 </div>
             </div>
             <span class="footer__bottom-text">© 2022 Qode Interactive, All Rights Reserved | Privacy Policy | Contact
