--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -80,7 +80,7 @@
                         CrossFit
                     </div>
                     <p class="a11y-hidden">크로스핏이란</p>
-                    <span>What is Cross<span class="point">Fit</span>?</span>
+                    <h3>What is Cross<span class="point">Fit</span>?</h3>
                 </div>
                 <div class="textarea">
                     <div class="main-contents-1">
@@ -115,7 +115,7 @@
                     <div class="back-text">
                         Benefit
                     </div>
-                    <span>benefit of cross<span class="point">Fit</span></span>
+                    <h3>benefit of cross<span class="point">Fit</span></h3>
                 </div>
 
 
