style: add anitmation to input

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
         <div class="lg-text bmi__text--lg">Input your BMI</div>
         <div class="sm-text bmi__text--sm">Duo graece ponderum ne, ei mel aliquando. Pro te<br>tamquam nonumes, nam no nemore epicurei</div>
         <div class="bmi__input--wrapper">
-          <input id="bmi__input--height" type="number" placeholder="Height / cm">
-          <input id="bmi__input--weight" type="number" placeholder="Weight / kg">
-          <input id="bmi__input--age" type="number" placeholder="Age">
+          <input id="bmi__input--height" type="text" placeholder="Height / cm">
+          <input id="bmi__input--weight" type="text" placeholder="Weight / kg">
+          <input id="bmi__input--age" type="text" placeholder="Age">
           <input id="bmi--input--gender" type="text" placeholder="Gender">
-          <input id="bmi--input--factor" type="number" placeholder="Select an activity factor:">
+          <input id="bmi--input--factor" type="text" placeholder="Select an activity factor:">
         </div>
         <button class="btn--arrow bmi__btn--bmi-calculate">Calculate</button>
       </div>
