--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -70,8 +70,8 @@
     <!-- 크로스핏 이란? -->
 
     <section class="main-contents">
-
         <p class="a11y-hidden">크로스핏이란</p>
+
         <div class="main-contents-containar">
             <p class="a11y-hidden">내용</p>
             <div class="main-contents-box">
@@ -101,9 +101,9 @@
         </div>
     </section>
     <!-- 크로스핏의 장점 -->
-    <p class="a11y-hidden">크로스핏의 장점</p>
-    <section class="main-contents">
 
+    <section class="main-contents">
+        <p class="a11y-hidden">크로스핏의 장점</p>
         <div class="main-contents-containar">
             <div class="contents-imgbox">
                 <img src="./images/img-contents2.jpg" alt="content2" class="contents-img">
@@ -261,7 +261,7 @@
                 <div class="second-contents__titlebox">
                     <h3 class="second-contents__titlebox__main">3. State-of-the-Art <span>Facilities</span> and
                         Comfortable
-                        Environment
+                        <span>Environment</span>
                     </h3>
                     <p class="second-contents__titlebox__sub">"We provide the latest equipment in a clean and
                         hygienic
