--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
   <header>
     <h1 class="logo">
       <a href="index.html">
-        <img src="images/logo.png" alt="KROPP">
+        <img src="images/logo.png" alt="KROPP logo">
       </a>
     </h1>
     <h2 class="a11y-hidden">메뉴</h2>
     <div class="utility">
-      <button class="btn-book">Book now</button>
+      <button class="btn-book" aria-label="booking button">Book now</button>
       <input id="hamburger" type="checkbox">
-      <label for="hamburger" id="btn-hamburger">
-        <div class="btn"><img src="images/ico_what.svg" alt="what"></div>
+      <label for="hamburger" id="btn-hamburger" aria-label="open navigation menu" >
+        <div class="btn"><img src="images/ico_what.svg" alt="open menu button"></div>
       </label>
     </div>
-    <nav class="gnb">
+    <nav class="gnb" aria-label="main menu">
       <ul>
-        <li><a href="index.html" target="_blank" title="Open new window">Home</a></li>
-        <li><a href="pages/sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
-        <li><a href="pages/sub2/sub2.html" target="_blank" title="Open new window">Curriculum</a></li>
-        <li><a href="pages/sub3/sub3.html" target="_blank" title="Open new window">members</a></li>
+        <li><a href="index.html" target="_blank" title="Open new window" aria-label="open home in new tab">Home</a></li>
+        <li><a href="pages/sub1/sub1.html" target="_blank" title="Open new window" aria-label="open about page in new tab">ABOUT</a></li>
+        <li><a href="pages/sub3/sub3.html" target="_blank" title="Open new window" aria-label="open curriculum page in new tab">Curriculum</a></li>
+        <li><a href="pages/sub2/sub2.html" target="_blank" title="Open new window" aria-label="open members page in new tab">members</a></li>
       </ul>
     </nav>
   </header>
