--- a/pages/sub3/sub3.html
+++ b/pages/sub3/sub3.html
@@ -107,22 +107,22 @@
                     <div class="training__descriptionBox">
                         <div class="training_discImgboxes">
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-Weight01.jpg" alt="">
+                                <img src="./img/training__descriptionBox-Weight01.jpg" alt="man lifting weights">
                                 <strong>Hip & Leg</strong>
                                 <span>lower body strength exercise</span>
                             </div>
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-Weight02.jpg" alt="">
+                                <img src="./img/training__descriptionBox-Weight02.jpg" alt="Back view of a man exercising">
                                 <strong>Back</strong>
                                 <span>Upper body back-centered exercise</span>
                             </div>
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-Weight03.jpg" alt="">
+                                <img src="./img/training__descriptionBox-Weight03.jpg" alt="Man lifting weights while lying down">
                                 <strong>Chest</strong>
                                 <span>upper body chest exercise</span>
                             </div>
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-Weight04.jpg" alt="">
+                                <img src="./img/training__descriptionBox-Weight04.jpg" alt="Man holding dumbbells with arms wide open">
                                 <strong>Shoulder & Arm</strong>
                                 <span>shoulder and arm exercises</span>
                             </div>
@@ -140,12 +140,12 @@
                     <div class="training__descriptionBox">
                         <div class="training_discImgboxes">
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-booster01.jpg" alt="">
+                                <img src="./img/training__descriptionBox-booster01.jpg" alt="man doing iron bars">
                                 <strong>Conditioning</strong>
                                 <span>12 movement circuit exercise</span>
                             </div>
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-booster02.jpg" alt="">
+                                <img src="./img/training__descriptionBox-booster02.jpg" alt="lifting weights">
                                 <strong>strength</strong>
                                 <span>Exercises that gradually increase weight</span>
                             </div>
@@ -163,17 +163,17 @@
                     <div class="training__descriptionBox">
                         <div class="training_discImgboxes">
                             <div class="training_discbox">
-                                <img src="./img/training__descriptionBox-recovery01.jpg" alt="">
+                                <img src="./img/training__descriptionBox-recovery01.jpg" alt="Woman lying down and massaging a ball on the back of her neck">
                                 <strong>mat pilates</strong>
                                 <span>bodyweight pilates</span>
                             </div>
                             <div>
-                                <img src="./img/training__descriptionBox-recovery02.jpg" alt="">
+                                <img src="./img/training__descriptionBox-recovery02.jpg" alt="Woman stretching bare body with bricks">
                                 <strong>recovery strething</strong>
                                 <span>Flexibility exercises with props</span>
                             </div>
                             <div>
-                                <img src="./img/training__descriptionBox-recovery03.jpg" alt="">
+                                <img src="./img/training__descriptionBox-recovery03.jpg" alt="Stretching while lying down with legs raised">
                                 <strong>yoga</strong>
                                 <span>Flow, vinyasa classes</span>
                             </div>
