--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -106,7 +106,7 @@
         <p class="a11y-hidden">크로스핏의 장점</p>
         <div class="main-contents-containar">
             <div class="contents-imgbox">
-                <img src="./images/img-contents2.jpg" alt="content2" class="contents-img">
+                <img src="./images/img-contents2.jpg" alt="싸이클을 타는 여성" class="contents-img">
             </div>
 
             <div class="main-contents__text ">
@@ -207,7 +207,7 @@
 
             <div class="second-contents_gymbox">
                 <div class="second-contents__img">
-                    <img src="./images/img-benefit1.jpg" alt="benefit1">
+                    <img src="./images/img-benefit1.jpg" alt="코칭을 받고 있는 여성">
                 </div>
                 <div class="second-contents__titlebox">
                     <h3 class="second-contents__titlebox__main">1. Professional Coaching <span>Team</span></h3>
@@ -221,7 +221,7 @@
                     <a href="#coach">
                         <div class="btn-arr">
                             <div class="second-contents__titlebox__arr">view team<div class="btn-arr_sub">
-                                    <img src="./images/ico-arr.svg" alt="arr">
+                                    <img src="./images/ico-arr.svg" alt="클릭 화살표">
                                 </div>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
 
             <div class="second-contents_gymbox">
                 <div class="second-contents__img">
-                    <img src="./images/img-benefit2.jpg" alt="benefit2">
+                    <img src="./images/img-benefit2.jpg" alt="데드리프트를 하는 여성">
                 </div>
 
                 <div class="second-contents__titlebox">
@@ -247,7 +247,7 @@
                     <a href="#pt">
                         <div class="btn-arr">
                             <div class="second-contents__titlebox__arr">view classes<span class="btn-arr_sub"><img
-                                        src="./images/ico-arr.svg" alt="arr"></span>
+                                        src="./images/ico-arr.svg" alt="클릭 화살표"></span>
                             </div>
                         </div>
                     </a>
@@ -255,7 +255,7 @@
             </div>
             <div class="second-contents_gymbox">
                 <div class="second-contents__img">
-                    <img src="./images/img-benefit3.jpg" alt="benefit3">
+                    <img src="./images/img-benefit3.jpg" alt="깔끔하게 정리되어 있는 덤벨">
                 </div>
 
                 <div class="second-contents__titlebox">
@@ -273,7 +273,7 @@
                     <a href="#pt">
                         <div class="btn-arr">
                             <div class="second-contents__titlebox__arr">view facilities<span class="btn-arr_sub"><img
-                                        src="./images/ico-arr.svg" alt="arr"></span>
+                                        src="./images/ico-arr.svg" alt="클릭 화살표"></span>
                             </div>
                         </div>
                     </a>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach1.jpg" alt="coach1" class="img-coa">
+                        <img src="./images/img-coach1.jpg" alt="ibkim 코치의 사진" class="img-coa">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -323,7 +323,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach2.jpg" alt="coach2">
+                        <img src="./images/img-coach2.jpg" alt="alex코치의 사진">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -338,7 +338,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach3.jpg" alt="coach3">
+                        <img src="./images/img-coach3.jpg" alt="issac 코치의 사진">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -353,7 +353,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach4.jpg" alt="coach4">
+                        <img src="./images/img-coach4.jpg" alt="Jessica 코치의 사진">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -368,7 +368,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach5.jpg" alt="coach5">
+                        <img src="./images/img-coach5.jpg" alt="Jane 코치의 사진">
                     </div>
                 </div>
                 <div class="third-contents__coachcard">
@@ -383,7 +383,7 @@
                     </div>
                     <div class="coach-img">
                         <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
-                        <img src="./images/img-coach6.jpg" alt="coach6">
+                        <img src="./images/img-coach6.jpg" alt="Andew 코치의 사진">
                     </div>
                 </div>
             </div>
