--- a/pages/sub1/sub1.html
+++ b/pages/sub1/sub1.html
@@ -307,7 +307,7 @@
                         </div>
                     </div>
                     <div class="coach-img">
-                        <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
+                        <div class="coach-click"><img src="./images/ico-arr.svg" alt="클릭 화살표"></div>
                         <img src="./images/img-coach1.jpg" alt="ibkim 코치의 사진" class="img-coa">
                     </div>
                 </div>
@@ -322,7 +322,7 @@
                         </div>
                     </div>
                     <div class="coach-img">
-                        <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
+                        <div class="coach-click"><img src="./images/ico-arr.svg" alt="클릭 화살표"></div>
                         <img src="./images/img-coach2.jpg" alt="alex코치의 사진">
                     </div>
                 </div>
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <div class="coach-img">
-                        <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
+                        <div class="coach-click"><img src="./images/ico-arr.svg" alt="클릭 화살표"></div>
                         <img src="./images/img-coach3.jpg" alt="issac 코치의 사진">
                     </div>
                 </div>
@@ -352,7 +352,7 @@
                         </div>
                     </div>
                     <div class="coach-img">
-                        <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
+                        <div class="coach-click"><img src="./images/ico-arr.svg" alt="클릭 화살표"></div>
                         <img src="./images/img-coach4.jpg" alt="Jessica 코치의 사진">
                     </div>
                 </div>
@@ -367,7 +367,7 @@
                         </div>
                     </div>
                     <div class="coach-img">
-                        <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
+                        <div class="coach-click"><img src="./images/ico-arr.svg" alt="클릭 화살표"></div>
                         <img src="./images/img-coach5.jpg" alt="Jane 코치의 사진">
                     </div>
                 </div>
@@ -382,7 +382,7 @@
                         </div>
                     </div>
                     <div class="coach-img">
-                        <div class="coach-click"><img src="./images/ico-arr.svg" alt=""></div>
+                        <div class="coach-click"><img src="./images/ico-arr.svg" alt="클릭 화살표"></div>
                         <img src="./images/img-coach6.jpg" alt="Andew 코치의 사진">
                     </div>
                 </div>
