--- a/pages/sub3/sub3.html
+++ b/pages/sub3/sub3.html
@@ -444,7 +444,7 @@
                 <div class="footer__item__title">start now</div>
                 <div class="btn--arrow"><input type="email" placeholder="Email" class="footer__input"></div>
                 <div class="footer__item__icon-wrapper">
-                    <a><img src="../../images/ico_ticktok.svg" alt="ticktok" q></a>
+                    <a><img src="../../images/ico_ticktok.svg" alt="ticktok"></a>
                     <a><img src="../../images/ico_youtube.svg" alt="youtube"></a>
                     <a><img src="../../images/ico_instagram.svg" alt="instagram"></a>
                     <a><img src="../../images/ico_facebook.svg" alt="facebook"></a>
