--- a/pages/sub2/sub2.html
+++ b/pages/sub2/sub2.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>members</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/est__team2/global.css">
+  <link rel="stylesheet" href="/global.css">
   <link rel="stylesheet" href="sub2.css">
 </head>
+
 <body>
+  <!-- header -->
   <header>
     <h1 class="logo"><a href="#"><img src="../../images/logo.png" alt="KROPP"></a></h1>
     <h2 class="a11y-hidden">Menu</h2>
@@ -21,55 +23,64 @@
     
     <nav class="gnb">
       <ul>
-         <li><a href="../main/main.html">Home</a></li>
-        <li><a href="./pages/sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
-        <li><a href="./pages/sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
-        <li><a href="./pages/sub2/sub2.html" target="_blank" title="Open new window">members</a></li>
+              <li><a href="../../index.html" target="_blank" title="Open new window">Home</a></li>
+              <li><a href="../sub1/sub1.html" target="_blank" title="Open new window">ABOUT</a></li>
+              <li><a href="../sub3/sub3.html" target="_blank" title="Open new window">Curriculum</a></li>
+              <li><a href="../sub2/sub2.html" target="_blank" title="Open new window">members</a></li>
       </ul>
     </nav>
   </header>
+
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>PRICING PLAN</h1>
+      <h1>MEMBERS</h1>
+      <div class="v-line">
+      </div>
     </div>
   </section>
 
   <!-- Pricing Section -->
   <section class="pricing">
     <p class="section-tagline">CHOOSE YOUR PLAN</p>
-    <h2 class="section-title">PRICING PACKAGE</h2>
+    <h2 class="section-title">PRICING PLAN</h2>
     <p class="section-description">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonumy tempor incididunt ut labore et dolore magna aliqua.
+      At KROPP Fitness, Membership not only gives you access to our clean and spacious gyms, <BR> it connects you with knowledgeable coaches and an uplifting community inside our gyms.
     </p>
     <div class="pricing-cards">
       <!-- Card 1 -->
       <div class="card">
         <h3>ONE DAY PASS</h3>
-        <p class="card-price">$15/PER DAY</p>
+        <hr style="border: none; border-top: 1px solid black; margin: 20px 0;">
         <p class="card-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonumy tempor.
+          Whether you’re visiting F7 on business or are just taking your personal fitness one day at a time, we’d like to invite you to experience all that F7 has to offer.
         </p>
+        <hr style="border: none; border-top: 1px solid black; margin: 20px 0;">
+        <p class="card-price">$15/PER DAY</p>
         <a href="#" class="card-btn">JOIN NOW</a>
       </div>
       <!-- Card 2 -->
       <div class="card highlight">
         <h3>MONTHLY PASS</h3>
-        <p class="card-price">$90/PER MONTH</p>
+        <hr style="border: none; border-top: 1px solid black; margin: 20px 0;">
         <p class="card-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonumy tempor.
+          Our monthly membership helps you to keep your fitness goals on track without a commitment of any kind, while still enjoying all of the amenities that F7 has to offer.
         </p>
+        <hr style="border: none; border-top: 1px solid black; margin: 20px 0;">
+        <p class="card-price">$90/PER MONTH</p>
         <a href="#" class="card-btn">JOIN NOW</a>
         <span class="best-value">BEST VALUE</span>
       </div>
       <!-- Card 3 -->
       <div class="card">
         <h3>YEARLY PASS</h3>
-        <p class="card-price">$59/PER MONTH</p>
-        <p class="card-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonumy tempor.
+        <hr style="border: none; border-top: 1px solid black; margin: 20px 0;">
+           <p class="card-description">
+          With a 1-year commitment we offer monthly membership for only $59. When you pre-purchase a complete year INDIVIDUAL membership you get 2/m FREE EXTENTION
         </p>
+        <hr style="border: none; border-top: 1px solid black; margin: 20px 0;">
+        <p class="card-price">$59/PER MONTH</p>
         <a href="#" class="card-btn">JOIN NOW</a>
       </div>
     </div>
@@ -90,7 +101,7 @@
     </div>
     <div class="about-image">
       <div class="image-frame">
-        <img src="./image/monochrome-portrait-man-working-out.jpg" alt="About Image">
+        <img src="image/male-bodybuilder-training-with-dumbbells-in-gym-2024-11-26-19-27-15-utc.jpg" alt="man Image">
       </div>
     </div>
   </section>
@@ -99,7 +110,7 @@
   <section class="why-choose">
     <div class="why-image">
       <div class="image-frame">
-        <img src="./image/juneteenth-celebration-with-symbolic-representation-end-slavery-united-states.jpg" alt="Gym Image">
+        <img src="image/cropped-image-of-young-sportswoman-spreading-chalk-2024-11-18-01-56-28-utc.jpg" alt="girl Image">
       </div>
     </div>
     <div class="why-content">
@@ -131,8 +142,7 @@
 크로스핏 지점 안내 추가
 ex) 강남점, 잠실점, 목동점 등
   
-
-
+  <!-- footer -->
   <footer>
     <div class="footer__wrapper ">
       <div class="footer__logo"><img src="images/logo.png" alt=""></div>
@@ -157,7 +167,7 @@ ex) 강남점, 잠실점, 목동점 등
       </div>
       <div class="footer__item" id="footer__item--start-now">
         <div class="footer__item__title">start now</div>
-        <div class="btn--arrow"><input type="email" placeholder="Email"></div>
+        <div class="btn--arrow footer__btn"><input type="email" placeholder="Email" class="footer__input"></div>
         <div class="footer__item__icon-wrapper">
           <a><img src="images/ico_ticktok.svg" alt=""></a>
           <a><img src="images/ico_youtube.svg" alt=""></a>
@@ -169,5 +179,6 @@ ex) 강남점, 잠실점, 목동점 등
       <span class="footer__bottom-text">© 2022 Qode Interactive, All Rights Reserved | Privacy Policy | Contact Us</span>
     </div>
   </footer>
+  
 </body>
 </html>
